--- a/style.css
+++ b/style.css
@@ -94,10 +94,20 @@ input[type='text'], input[type='number']{
     border:0;
     display: block;
     font-size: 16px;
-    margin: 10px 0 30px;
+    margin: 10px 0 ;
     padding: 10px;
     width: 100%;
 }
+
+input[type="date"] {
+    border: 1px solid #dedede;
+    border-radius: 2px;
+    display: block;
+    font-size: 16px;
+    padding: 10px;
+    width: 100%;
+}
+
 
 .btn:focus, .delete-btn:focus{
     outline: 0;
@@ -142,6 +152,49 @@ input[type='text'], input[type='number']{
     transform: translate(-100%, -50%);
     opacity: 0;
     transition: opacity 0.3s ease;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    background-color: #ffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    margin-top: 200px;
+
+}
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 2;
+    cursor: pointer;
+  }
+
+.details-btn{
+    cursor: pointer;
+    border: 1px;
+    transition: 0.3s;
+    padding: 6px;
+    font-size: 12px;
+    font-weight: 100;
+}
+
+.details-btn:hover{
+    background-color: #9c88ff;
+    color: white;
 }
 
 .list li:hover .delete-btn{
